# 20210714-p4

./: Cargo.toml  README.md  index.html  main.css  main.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: gh-pages.yml
examples/: p4.rs
scripts/: App.tsx  board.ts  main.tsx  state.ts
scripts/components/: GameBoard.tsx  Hero.tsx  Info.tsx  Status.tsx  UI.tsx
src/: lib.rs  main.rs  move_sorter.rs  opening_book.rs  position.rs  solver.rs  transposition_table.rs
static/: index.html
