[package]
name = "p4"
version = "0.1.0"
authors = ["TSUYUSATO Kitsune <make.just.on@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
once_cell = "1.8.0"
wasm-bindgen = "0.2"

[dev-dependencies]
rustyline = "8.2.0"
structopt = "0.3"

[[example]]
name = "p4"

[profile.release]
lto = true
